--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ li.ant-pagination-item-active a {
 .ant-menu-item-active{
   color: #3fc060 !important;
 }
+
+/* 
+[data-amplify-authenticator] [data-amplify-router]{
+  margin-top: 20%;
+} */
